<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/crime_picture"
        android:layout_margin="8dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/crime_camera_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@id/crime_picture"
        app:layout_constraintStart_toStartOf="@id/crime_picture"
        app:layout_constraintTop_toBottomOf="@id/crime_picture" />

    <TextView
        android:id="@+id/crime_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/crime_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/crime_title_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/crime_picture"
        app:layout_constraintTop_toBottomOf="@id/crime_title" />

    <TextView
        android:id="@+id/crime_details"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        app:layout_constraintTop_toBottomOf="@id/crime_camera_button" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/crime_details"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        app:layout_constraintTop_toBottomOf="@id/crime_date" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        app:layout_constraintTop_toBottomOf="@id/crime_solved" />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        app:layout_constraintTop_toBottomOf="@id/crime_suspect" />

</androidx.constraintlayout.widget.ConstraintLayout>